# mkdocs-ipymd

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  release.yml
docs/extras/: custom-template.tpl  pandas.css
src/mkdocs_pymd/: plugin.py
src/mkdocs_pymd/cli/: main.py
src/mkdocs_pymd/converters/: base.py  to_jupyter.py  to_markdown.py
tests/: test_converters.py  test_plugin.py
