[tool.poetry]
name = "mkdocs_ipymd"
version = "0.1.0"
description = ""
authors = ["Felipe Angelim <felipeangelim@gmail.com>"]
readme = "README.md"
packages = [{include = "mkdocs_ipymd", from="src"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
markdown = "^3.7"
mkdocs = "^1.6.1"
pygments = "^2.18.0"
nbformat = "^5.10.4"
nbclient = "^0.10.0"
nbconvert = "^7.16.4"
ipykernel = "^6.29.5"

[tool.poetry.scripts]
mkdocs-pymd = "mkdocs_ipymd.cli.main:cli"




[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.5.45"
pymdown-extensions = "^10.12"
pytest = "^8.3.3"
pandas = "^2.2.3"
numpy = ">2.0"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."mkdocs.plugins"]
"ipymd" = "mkdocs_ipymd.plugin:PyToMarkdownPlugin"